Fixed transparent button in dark mode in invoice-app

--- a/invoice-app/src/app/invoice-add-edit/invoice-add-edit.component.scss
+++ b/invoice-app/src/app/invoice-add-edit/invoice-add-edit.component.scss
@@ -94,7 +94,7 @@ form h3 {
     width: 23.7%;
     height: 3rem;
     border: none;
-    background-color: var(--button-draft-light-indicator);
+    background-color: var(--btn-background-draft);
     color: var(--secondary-font);
     text-align: center;
     border-radius: 1.5rem;
